--- a/stili.css
+++ b/stili.css
@@ -185,8 +185,7 @@ a:hover {
         width: 100%;
         list-style: none;
         padding: 0;
-        margin: 0;
-        margin-left: 30px; /* Spazio tra logo e menu */
+        margin: 0 30px;
     }
 
     .nav-primary {
