--- a/stili.css
+++ b/stili.css
@@ -224,16 +224,23 @@ a:hover {
     position: relative;
 }
 
+.footer-image {
+    width: 100%;
+    height: 100px; /* Altezza ridotta rispetto alla header-image */
+    background-size: inherit;
+    background-position: center;
+}
+
 /* Immagine di sfondo per dispositivi desktop */
 @media (min-width: 769px) {
-    .header-image {
+    .header-image, .footer-image {
         background-image: url('images/header-image-04.jpg'); /* Immagine desktop */
     }
 }
 
 /* Immagine di sfondo per dispositivi mobili */
 @media (max-width: 768px) {
-    .header-image {
+    .header-image, .footer-image {
         background-image: url('images/header-image-04_mobile.jpg'); /* Immagine ottimizzata per mobile */
     }
 }
@@ -546,7 +553,7 @@ body.chi-siamo .contact-icons img {
         text-align: center; /* Titolo al centro solo mobile */
     }
 	
-	body.chi-siamo .header-image {
+	body.chi-siamo .header-image, body.chi-siamo .footer-image {
 		background-image: url('images/bg-chi-siamo_mobile.jpg');
 	}
 }
