Immagini pagina SEO

--- a/stili.css
+++ b/stili.css
@@ -530,6 +530,10 @@ body.search-marketing .header-image, body.search-marketing .footer-image {
     background-image: url('images/bg-search-marketing.jpg');
 }
 
+body.seo .header-image, body.seo .footer-image {
+    background-image: url('images/bg-seo.jpg');
+}
+
 body.chi-siamo .profile-left {
     display: flex;
     flex-direction: column;
@@ -572,6 +576,10 @@ body.chi-siamo .contact-icons img {
 	
 	body.search-marketing .header-image, body.search-marketing .footer-image {
 		background-image: url('images/bg-search-marketing_mobile.jpg');
+	}
+	
+	body.seo .header-image, body.seo .footer-image {
+		background-image: url('images/bg-seo_mobile.jpg');
 	}
 }
 
